--- a/MitosisTimesheet/src/main/webapp/reports/individualDetailReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/individualDetailReport.jrxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report3" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="9"/>
-	<property name="ireport.y" value="48"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
 	<parameter name="name" class="java.lang.String"/>
+	<parameter name="totalhours" class="java.lang.Double"/>
 	<field name="date" class="java.util.Date"/>
 	<field name="hours" class="java.lang.Double"/>
 	<field name="issueNumber" class="java.lang.String"/>
@@ -148,6 +149,32 @@
 		</band>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="44" splitType="Stretch">
+			<rectangle>
+				<reportElement x="1" y="8" width="554" height="31"/>
+			</rectangle>
+			<line>
+				<reportElement x="97" y="8" width="1" height="31"/>
+			</line>
+			<staticText>
+				<reportElement x="12" y="13" width="85" height="19"/>
+				<textElement/>
+				<text><![CDATA[Total Hours]]></text>
+			</staticText>
+			<line>
+				<reportElement x="197" y="8" width="1" height="31"/>
+			</line>
+			<textField>
+				<reportElement x="123" y="13" width="65" height="19"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$P{totalhours}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="310" y="8" width="1" height="31"/>
+			</line>
+			<line>
+				<reportElement x="417" y="8" width="1" height="31"/>
+			</line>
+		</band>
 	</summary>
 </jasperReport>
