--- a/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
@@ -1,61 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="993" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="555" pageHeight="953" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="62"/>
+	<property name="ireport.y" value="41"/>
 	<parameter name="name" class="java.lang.String"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
 	<parameter name="totalhours" class="java.lang.Double"/>
+	<queryString>
+		<![CDATA[]]>
+	</queryString>
 	<field name="date" class="java.util.Date"/>
 	<field name="hours" class="java.lang.Double"/>
 	<field name="userDetails.name" class="java.lang.String"/>
 	<field name="project.projectName" class="java.lang.String"/>
 	<sortField name="date"/>
+	<sortField name="project.projectName"/>
+	<group name="projectname">
+		<groupExpression><![CDATA[$F{project.projectName}]]></groupExpression>
+		<groupHeader>
+			<band height="45">
+				<textField>
+					<reportElement x="84" y="15" width="250" height="20"/>
+					<textElement/>
+					<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
+				</textField>
+				<staticText>
+					<reportElement x="13" y="14" width="71" height="20"/>
+					<textElement/>
+					<text><![CDATA[Project Name:]]></text>
+				</staticText>
+			</band>
+		</groupHeader>
+		<groupFooter>
+			<band/>
+		</groupFooter>
+	</group>
 	<title>
-		<band height="113" splitType="Stretch">
+		<band height="67" splitType="Stretch">
 			<staticText>
 				<reportElement x="171" y="16" width="258" height="19"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Mitosis Timesheet - Team Summary Report]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="159" y="43" width="151" height="20"/>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{name}]]></textFieldExpression>
-			</textField>
 			<staticText>
-				<reportElement x="160" y="74" width="32" height="21"/>
+				<reportElement x="160" y="42" width="32" height="21"/>
 				<textElement/>
 				<text><![CDATA[From:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="192" y="75" width="100" height="20"/>
+				<reportElement x="192" y="43" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{fromDate}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="364" y="74" width="17" height="21"/>
+				<reportElement x="364" y="42" width="17" height="21"/>
 				<textElement/>
 				<text><![CDATA[To:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="381" y="74" width="100" height="20"/>
+				<reportElement x="381" y="42" width="100" height="21"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{toDate}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="310" y="43" width="27" height="20"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[-]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="338" y="44" width="167" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
-			</textField>
 		</band>
 	</title>
+	<pageHeader>
+		<band height="50"/>
+	</pageHeader>
 	<columnHeader>
 		<band height="33" splitType="Stretch">
 			<rectangle>
