--- a/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="555" pageHeight="953" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="4"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="name" class="java.lang.String"/>
 	<parameter name="fromDate" class="java.lang.String"/>
@@ -14,11 +14,12 @@
 	<field name="hours" class="java.lang.Double"/>
 	<field name="userDetails.name" class="java.lang.String"/>
 	<field name="project.projectName" class="java.lang.String"/>
+	<field name="sumhours" class="java.lang.Double"/>
 	<sortField name="project.projectName"/>
 	<group name="projectname">
 		<groupExpression><![CDATA[$F{project.projectName}]]></groupExpression>
 		<groupHeader>
-			<band height="45">
+			<band height="70">
 				<textField>
 					<reportElement x="84" y="15" width="250" height="20"/>
 					<textElement/>
@@ -29,10 +30,40 @@
 					<textElement/>
 					<text><![CDATA[Project Name:]]></text>
 				</staticText>
+				<line>
+					<reportElement x="310" y="37" width="1" height="32"/>
+				</line>
+				<staticText>
+					<reportElement mode="Opaque" x="381" y="43" width="114" height="21"/>
+					<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+					<text><![CDATA[Hours]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="181" y="46" width="73" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+					<text><![CDATA[Name]]></text>
+				</staticText>
+				<line>
+					<reportElement x="131" y="37" width="1" height="33"/>
+				</line>
+				<staticText>
+					<reportElement x="42" y="46" width="55" height="18"/>
+					<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+					<text><![CDATA[Date]]></text>
+				</staticText>
+				<rectangle>
+					<reportElement mode="Transparent" x="15" y="38" width="522" height="32"/>
+				</rectangle>
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band/>
+			<band height="45" splitType="Stretch">
+				<textField>
+					<reportElement x="395" y="11" width="100" height="20"/>
+					<textElement/>
+					<textFieldExpression class="java.lang.Double"><![CDATA[$F{sumhours}]]></textFieldExpression>
+				</textField>
+			</band>
 		</groupFooter>
 	</group>
 	<title>
@@ -65,35 +96,10 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="50"/>
+		<band height="1"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="33" splitType="Stretch">
-			<rectangle>
-				<reportElement x="15" y="0" width="522" height="32"/>
-			</rectangle>
-			<staticText>
-				<reportElement x="44" y="9" width="55" height="18"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[Date]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="386" y="9" width="114" height="21"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[Hours]]></text>
-			</staticText>
-			<line>
-				<reportElement x="310" y="0" width="1" height="32"/>
-			</line>
-			<line>
-				<reportElement x="131" y="-1" width="1" height="33"/>
-			</line>
-			<staticText>
-				<reportElement x="181" y="9" width="73" height="20"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[Name]]></text>
-			</staticText>
-		</band>
+		<band height="5" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
 		<band height="28" splitType="Stretch">
@@ -117,7 +123,7 @@
 				<reportElement x="131" y="0" width="1" height="27"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="142" y="7" width="151" height="17"/>
+				<reportElement x="141" y="6" width="151" height="17"/>
 				<textElement textAlignment="Left"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{userDetails.name}]]></textFieldExpression>
 			</textField>
