--- a/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamSummaryReport.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="555" pageHeight="953" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="3"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="name" class="java.lang.String"/>
 	<parameter name="fromDate" class="java.lang.String"/>
@@ -13,18 +13,24 @@
 	<field name="date" class="java.util.Date"/>
 	<field name="hours" class="java.lang.Double"/>
 	<field name="userDetails.name" class="java.lang.String"/>
-	<field name="project.projectName" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
+	<field name="project.projectName" class="java.lang.String"/>
+	<sortField name="project.projectName"/>
+	<variable name="projecttotal" class="java.lang.Double" resetType="Group" resetGroup="projectname" calculation="Sum">
+		<variableExpression><![CDATA[$F{hours}]]></variableExpression>
+		<initialValueExpression><![CDATA[]]></initialValueExpression>
+	</variable>
 	<variable name="sumhours" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{hours}]]></variableExpression>
 	</variable>
-	<variable name="hours" class="java.lang.Double" calculation="Sum"/>
-	<variable name="projecttotal" class="java.lang.Double" resetType="Group" resetGroup="projectname" calculation="Sum"/>
 	<group name="projectname">
 		<groupExpression><![CDATA[$F{project.projectName}]]></groupExpression>
 		<groupHeader>
 			<band height="70">
+				<textField>
+					<reportElement x="84" y="15" width="250" height="20"/>
+					<textElement/>
+					<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
+				</textField>
 				<staticText>
 					<reportElement x="13" y="14" width="71" height="20"/>
 					<textElement/>
@@ -54,18 +60,13 @@
 				<rectangle>
 					<reportElement mode="Transparent" x="15" y="38" width="522" height="32"/>
 				</rectangle>
-				<textField>
-					<reportElement x="84" y="14" width="208" height="20"/>
-					<textElement/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
-				</textField>
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="47" splitType="Stretch">
+			<band height="45" splitType="Stretch">
 				<textField>
-					<reportElement x="395" y="12" width="103" height="20"/>
-					<textElement textAlignment="Center"/>
+					<reportElement x="406" y="13" width="108" height="20"/>
+					<textElement/>
 					<textFieldExpression class="java.lang.Double"><![CDATA[$V{projecttotal}]]></textFieldExpression>
 				</textField>
 			</band>
@@ -104,7 +105,7 @@
 		<band height="1"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="1" splitType="Stretch"/>
+		<band height="5" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
 		<band height="28" splitType="Stretch">
@@ -119,17 +120,17 @@
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{date})]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement x="131" y="0" width="1" height="27"/>
-			</line>
 			<textField>
-				<reportElement x="386" y="3" width="100" height="20"/>
+				<reportElement x="354" y="6" width="175" height="18"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{hours}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="160" y="6" width="132" height="20"/>
-				<textElement textAlignment="Center"/>
+			<line>
+				<reportElement x="131" y="0" width="1" height="27"/>
+			</line>
+			<textField isBlankWhenNull="true">
+				<reportElement x="141" y="6" width="151" height="17"/>
+				<textElement textAlignment="Left"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{userDetails.name}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -157,8 +158,8 @@
 				<text><![CDATA[Total Hours]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="398" y="14" width="100" height="20"/>
-				<textElement textAlignment="Center"/>
+				<reportElement x="364" y="14" width="100" height="20"/>
+				<textElement/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$V{sumhours}]]></textFieldExpression>
 			</textField>
 		</band>
