--- a/MitosisTimesheet/src/main/webapp/reports/teamDetailReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamDetailReport.jrxml
@@ -1,124 +1,159 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report3" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="228"/>
+	<property name="ireport.x" value="235"/>
+	<property name="ireport.y" value="206"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
 	<parameter name="name" class="java.lang.String"/>
-	<parameter name="totalhours" class="java.lang.Double"/>
+	<queryString>
+		<![CDATA[]]>
+	</queryString>
 	<field name="date" class="java.util.Date"/>
 	<field name="hours" class="java.lang.Double"/>
 	<field name="issueNumber" class="java.lang.String"/>
 	<field name="description" class="java.lang.String"/>
 	<field name="project.projectName" class="java.lang.String"/>
 	<field name="userDetails.name" class="java.lang.String"/>
+	<sortField name="project.projectName"/>
 	<sortField name="date"/>
+	<sortField name="userDetails.name"/>
+	<variable name="projecttotal" class="java.lang.Double" resetType="Group" resetGroup="projectname" calculation="Sum">
+		<variableExpression><![CDATA[$F{hours}]]></variableExpression>
+	</variable>
+	<variable name="totalhours" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{hours}]]></variableExpression>
+	</variable>
+	<group name="projectname">
+		<groupExpression><![CDATA[$F{project.projectName}]]></groupExpression>
+		<groupHeader>
+			<band height="68">
+				<staticText>
+					<reportElement x="1" y="0" width="75" height="20"/>
+					<textElement/>
+					<text><![CDATA[Project Name:]]></text>
+				</staticText>
+				<textField>
+					<reportElement x="76" y="0" width="222" height="20"/>
+					<textElement/>
+					<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
+				</textField>
+				<rectangle>
+					<reportElement x="1" y="39" width="553" height="28"/>
+				</rectangle>
+				<line>
+					<reportElement x="61" y="39" width="1" height="28"/>
+				</line>
+				<line>
+					<reportElement x="183" y="39" width="1" height="28"/>
+				</line>
+				<line>
+					<reportElement x="271" y="39" width="1" height="28"/>
+				</line>
+				<line>
+					<reportElement x="383" y="39" width="1" height="28"/>
+				</line>
+				<staticText>
+					<reportElement x="4" y="44" width="54" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Date]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="76" y="44" width="100" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Name]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="190" y="44" width="80" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Hours]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="283" y="44" width="100" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[IssueNumber]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="389" y="44" width="100" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Description]]></text>
+				</staticText>
+			</band>
+		</groupHeader>
+		<groupFooter>
+			<band height="50">
+				<rectangle>
+					<reportElement x="1" y="-1" width="554" height="23"/>
+				</rectangle>
+				<line>
+					<reportElement x="61" y="0" width="1" height="23"/>
+				</line>
+				<line>
+					<reportElement x="183" y="0" width="1" height="23"/>
+				</line>
+				<line>
+					<reportElement x="271" y="0" width="1" height="23"/>
+				</line>
+				<line>
+					<reportElement x="383" y="0" width="1" height="23"/>
+				</line>
+				<staticText>
+					<reportElement x="72" y="3" width="100" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Project Total Hours]]></text>
+				</staticText>
+				<textField>
+					<reportElement x="184" y="3" width="85" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression class="java.lang.Double"><![CDATA[$V{projecttotal}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupFooter>
+	</group>
 	<title>
-		<band height="97" splitType="Stretch">
+		<band height="66" splitType="Stretch">
 			<staticText>
 				<reportElement x="181" y="6" width="237" height="19"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Mitosis Timesheet - Team Detail Report]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="153" y="75" width="32" height="20"/>
+				<reportElement x="144" y="38" width="32" height="20"/>
 				<textElement/>
 				<text><![CDATA[From:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="329" y="74" width="18" height="20"/>
+				<reportElement x="319" y="38" width="18" height="20"/>
 				<textElement/>
 				<text><![CDATA[To: ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="185" y="75" width="85" height="20"/>
+				<reportElement x="177" y="39" width="85" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{fromDate}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement x="352" y="74" width="100" height="20"/>
+				<reportElement x="337" y="38" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{toDate}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="118" y="39" width="156" height="15"/>
-				<textElement textAlignment="Center">
-					<font size="10"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{name}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="283" y="39" width="162" height="16"/>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{project.projectName}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="273" y="39" width="10" height="15"/>
-				<textElement textAlignment="Center"/>
-				<text><![CDATA[-]]></text>
-			</staticText>
 		</band>
 	</title>
-	<columnHeader>
-		<band height="36" splitType="Stretch">
-			<rectangle>
-				<reportElement x="1" y="10" width="554" height="26"/>
-			</rectangle>
-			<line>
-				<reportElement x="183" y="10" width="1" height="26"/>
-			</line>
-			<line>
-				<reportElement x="271" y="10" width="1" height="26"/>
-			</line>
-			<textField>
-				<reportElement x="7" y="17" width="37" height="14"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Date"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="209" y="15" width="43" height="16"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Hours"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="291" y="16" width="87" height="18"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Issue Number"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="408" y="14" width="110" height="18"/>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Description"]]></textFieldExpression>
-			</textField>
-			<line>
-				<reportElement x="383" y="11" width="1" height="25"/>
-			</line>
-			<line>
-				<reportElement x="61" y="11" width="1" height="25"/>
-			</line>
-			<staticText>
-				<reportElement x="95" y="17" width="46" height="15"/>
-				<textElement/>
-				<text><![CDATA[Name]]></text>
-			</staticText>
-		</band>
-	</columnHeader>
 	<detail>
 		<band height="38" splitType="Stretch">
 			<rectangle>
-				<reportElement x="1" y="0" width="554" height="37"/>
+				<reportElement x="1" y="-1" width="554" height="37"/>
 			</rectangle>
 			<line>
 				<reportElement x="183" y="0" width="1" height="37"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="190" y="3" width="66" height="20"/>
+				<reportElement x="193" y="3" width="66" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{hours}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="271" y="1" width="1" height="37"/>
+				<reportElement x="271" y="-4" width="1" height="42"/>
 			</line>
 			<line>
 				<reportElement x="383" y="0" width="1" height="37"/>
@@ -146,41 +181,38 @@
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{date})]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="271" y="0" width="1" height="23"/>
+			</line>
 		</band>
 	</detail>
-	<pageFooter>
-		<band height="50">
-			<textField>
-				<reportElement x="445" y="22" width="100" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-		</band>
-	</pageFooter>
 	<summary>
-		<band height="54" splitType="Stretch">
+		<band height="42" splitType="Stretch">
 			<rectangle>
-				<reportElement x="1" y="10" width="554" height="34"/>
+				<reportElement x="1" y="0" width="554" height="27"/>
 			</rectangle>
 			<line>
-				<reportElement x="183" y="10" width="1" height="34"/>
+				<reportElement x="61" y="0" width="1" height="27"/>
+			</line>
+			<line>
+				<reportElement x="183" y="0" width="1" height="27"/>
+			</line>
+			<line>
+				<reportElement x="272" y="0" width="1" height="27"/>
+			</line>
+			<line>
+				<reportElement x="384" y="0" width="1" height="27"/>
 			</line>
 			<staticText>
-				<reportElement x="44" y="19" width="100" height="20"/>
+				<reportElement x="67" y="4" width="113" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[Total Hours]]></text>
+				<text><![CDATA[Total hours]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="190" y="19" width="66" height="20"/>
+				<reportElement x="188" y="7" width="80" height="17"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.Double"><![CDATA[$P{totalhours}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$V{totalhours}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement x="271" y="10" width="1" height="35"/>
-			</line>
-			<line>
-				<reportElement x="383" y="10" width="1" height="34"/>
-			</line>
 		</band>
 	</summary>
 </jasperReport>
