--- a/MitosisTimesheet/src/main/webapp/reports/teamDetailReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/teamDetailReport.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report3" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="82"/>
+	<property name="ireport.y" value="64"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
 	<parameter name="name" class="java.lang.String"/>
@@ -83,7 +83,7 @@
 		<groupFooter>
 			<band height="50">
 				<rectangle>
-					<reportElement x="1" y="-1" width="554" height="23"/>
+					<reportElement x="1" y="-1" width="553" height="23"/>
 				</rectangle>
 				<line>
 					<reportElement x="183" y="-2" width="1" height="25"/>
@@ -139,7 +139,7 @@
 	<detail>
 		<band height="38" splitType="Stretch">
 			<rectangle>
-				<reportElement x="1" y="-1" width="554" height="37"/>
+				<reportElement x="1" y="-1" width="553" height="37"/>
 			</rectangle>
 			<line>
 				<reportElement x="183" y="0" width="1" height="37"/>
@@ -183,6 +183,15 @@
 			</line>
 		</band>
 	</detail>
+	<pageFooter>
+		<band height="50">
+			<textField>
+				<reportElement x="206" y="13" width="135" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
+	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch">
 			<rectangle>
