--- a/MitosisTimesheet/src/main/webapp/css/style.css
+++ b/MitosisTimesheet/src/main/webapp/css/style.css
@@ -4494,6 +4494,11 @@ scale
 	color: red;
 }
 
+ .leave-form-div{
+	word-spacing: 8px;	
+	margin: 35px 0px 35px 0px;
+}
+
 .pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover,
 	.pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover
 	{
