--- a/MitosisTimesheet/src/main/webapp/reports/LeaveReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/LeaveReport.jrxml
@@ -2,14 +2,14 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="91"/>
 	<parameter name="fromDate" class="java.lang.String"/>
 	<parameter name="toDate" class="java.lang.String"/>
 	<field name="employee.name" class="java.lang.String"/>
 	<field name="fromDate" class="java.util.Date"/>
 	<field name="toDate" class="java.util.Date"/>
 	<field name="noOfDays" class="java.lang.Integer"/>
-	<variable name="noofdays" class="java.lang.Integer" calculation="Sum">
+	<variable name="noofdays" class="java.lang.Integer" resetType="Group" resetGroup="employee name" calculation="Sum">
 		<variableExpression><![CDATA[$F{noOfDays}]]></variableExpression>
 	</variable>
 	<group name="employee name">
@@ -73,9 +73,9 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[No of Days]]></text>
 				</staticText>
-				<textField isBlankWhenNull="true">
-					<reportElement x="423" y="3" width="104" height="20"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textField>
+					<reportElement x="424" y="3" width="100" height="20"/>
+					<textElement textAlignment="Center"/>
 					<textFieldExpression class="java.lang.Integer"><![CDATA[$V{noofdays}]]></textFieldExpression>
 				</textField>
 			</band>
@@ -153,7 +153,13 @@
 		<band height="45" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="53" splitType="Stretch"/>
+		<band height="53" splitType="Stretch">
+			<textField>
+				<reportElement x="214" y="14" width="100" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
